Improvements in design + Toast + no cache in apollo client

--- a/src/components/pages/Profile/index.css
+++ b/src/components/pages/Profile/index.css
@@ -1,3 +1,15 @@
+.profileContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  padding: 35px;
+}
+
+.cardContainer {
+  align-self: center;
+  padding: 40px;
+}
+
 .extraInfoContainer {
   display: flex;
   justify-content: left;
